Fix nav guards, remove the old comment collapse behaviour. if you back navigate, the last opened comment section is closed, irrespective whether it's in the viewport or not.

--- a/site/styles.css
+++ b/site/styles.css
@@ -249,6 +249,10 @@ blockquote {
 
 /** These replace inline styles, so we can tighten CSP **/
 
+.max-width-100 {
+   max-width: 100%;;
+}
+
 .margin-auto {
    margin: auto;
 }
