--- a/site/view.css
+++ b/site/view.css
@@ -28,7 +28,6 @@
    font-size: var(--ledit-font-size);
    line-height: 1em;
    cursor: pointer;
-   min-height: 3em;
 }
 
 .overlay-close-button {
